--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -14,251 +14,279 @@
       </h4>
 
       <div class="general-wrapper">
-        <div
-          class="c_info_wrap"
-          *ngIf="consultation.consultation.status !== 'closed'">
-          <button
-            class="submit-btn"
-            mat-button
-            (click)="
-              inviteExpert(consultation.consultation.expertInvitationURL)
-            ">
-            {{ 'chat.inviteExpert' | translate }}
-          </button>
-        </div>
+        <ng-container *ngIf="!isMobile || viewMore">
+          <div
+            class="c_info_wrap"
+            *ngIf="consultation.consultation.status !== 'closed'">
+            <button
+              class="submit-btn"
+              mat-button
+              (click)="
+                inviteExpert(consultation.consultation.expertInvitationURL)
+              ">
+              {{ 'chat.inviteExpert' | translate }}
+            </button>
+          </div>
 
-        <div class="c_info_wrap" *ngIf="consultation?.nurse?.firstName">
-          <div class="c_info_row_title">
-            {{ 'chat.requestedBy' | translate }}
-          </div>
-          <div style="font-size: 1em; padding-top: 5px">
-            {{ consultation.nurse.firstName }} {{ consultation.nurse.lastName }}
-            <app-status
-              [type]="
-                consultation.consultation.flagPatientOnline
-                  ? 'online'
-                  : 'offline'
-              "></app-status>
-          </div>
-        </div>
-        <div class="c_info_wrap">
-          <div class="c_info_row_title">
-            {{ 'chat.patientFirstnameAndLastname' | translate }}
-          </div>
-          <div class="c_info_row_content">
-            <ng-container
-              *ngIf="consultation.consultation.firstName !== 'No firstname'">
-              {{ consultation.consultation.firstName + ' ' }}
-              {{ consultation.consultation.lastName | uppercase }}
-            </ng-container>
-            <ng-container
-              *ngIf="consultation.consultation.firstName === 'No firstname'">
-              <span style="color: #8a8a8a">
-                {{ 'consultations.noPatientName' | translate }}
-              </span>
-            </ng-container>
-
-            <ng-container *ngIf="!consultation?.nurse?.firstName">
+          <div class="c_info_wrap" *ngIf="consultation?.nurse?.firstName">
+            <div class="c_info_row_title">
+              {{ 'chat.requestedBy' | translate }}
+            </div>
+            <div style="font-size: 1em; padding-top: 5px">
+              {{ consultation.nurse.firstName }}
+              {{ consultation.nurse.lastName }}
               <app-status
                 [type]="
                   consultation.consultation.flagPatientOnline
                     ? 'online'
                     : 'offline'
                 "></app-status>
-              <button
-                (click)="resendInvite(consultation.consultation.invite)"
-                class="submit-btn"
-                mat-button
-                *ngIf="
-                  consultation.consultation.status !== 'closed' &&
-                  !consultation.consultation.flagPatientOnline
-                ">
-                {{ 'invitations.sendAgain' | translate }}
-              </button>
-            </ng-container>
+            </div>
           </div>
-        </div>
+          <div class="c_info_wrap">
+            <div class="c_info_row_title">
+              {{ 'chat.patientFirstnameAndLastname' | translate }}
+            </div>
+            <div class="c_info_row_content">
+              <ng-container
+                *ngIf="consultation.consultation.firstName !== 'No firstname'">
+                {{ consultation.consultation.firstName + ' ' }}
+                {{ consultation.consultation.lastName | uppercase }}
+              </ng-container>
+              <ng-container
+                *ngIf="consultation.consultation.firstName === 'No firstname'">
+                <span style="color: #8a8a8a">
+                  {{ 'consultations.noPatientName' | translate }}
+                </span>
+              </ng-container>
 
-        <div
-          class="c_info_wrap"
-          *ngIf="consultation.consultation?.experts?.length">
-          <div class="c_info_row_title">
-            {{ 'Experts' | translate }}
+              <ng-container *ngIf="!consultation?.nurse?.firstName">
+                <app-status
+                  [type]="
+                    consultation.consultation.flagPatientOnline
+                      ? 'online'
+                      : 'offline'
+                  "></app-status>
+                <button
+                  (click)="resendInvite(consultation.consultation.invite)"
+                  class="submit-btn"
+                  mat-button
+                  *ngIf="
+                    consultation.consultation.status !== 'closed' &&
+                    !consultation.consultation.flagPatientOnline
+                  ">
+                  {{ 'invitations.sendAgain' | translate }}
+                </button>
+              </ng-container>
+            </div>
+          </div>
+
+          <div
+            class="c_info_wrap"
+            *ngIf="consultation.consultation?.experts?.length">
+            <div class="c_info_row_title">
+              {{ 'Experts' | translate }}
+            </div>
+            <div
+              class="experts_content"
+              *ngFor="let expert of consultation.consultation?.experts">
+              <ng-container>
+                {{ expert.firstName + ' ' }}
+                {{ expert.lastName | uppercase }}
+              </ng-container>
+
+              <app-status
+                [type]="
+                  getExpertStatusById(
+                    expert.id,
+                    consultation?.consultation?.flagExpertsOnline
+                  )
+                    ? 'online'
+                    : 'offline'
+                "></app-status>
+            </div>
+          </div>
+
+          <div class="c_info_wrap" *ngIf="consultation.consultation.birthDate">
+            <div class="c_info_row_title">
+              {{ 'chat.patientBirthday' | translate }}
+            </div>
+            <div class="c_info_row_content">
+              {{ consultation.consultation.birthDate | date: 'd MMM yyyy' }}
+            </div>
+          </div>
+          <div class="c_info_wrap">
+            <div class="c_info_row_title">{{ 'chat.sex' | translate }}</div>
+            <div class="c_info_row_content">
+              {{ consultation.consultation.gender | translatedGender }}
+            </div>
           </div>
           <div
-            class="experts_content"
-            *ngFor="let expert of consultation.consultation?.experts">
-            <ng-container>
-              {{ expert.firstName + ' ' }}
-              {{ expert.lastName | uppercase }}
-            </ng-container>
-
-            <app-status
-              [type]="
-                getExpertStatusById(
-                  expert.id,
-                  consultation?.consultation?.flagExpertsOnline
-                )
-                  ? 'online'
-                  : 'offline'
-              "></app-status>
-          </div>
-        </div>
-
-        <div class="c_info_wrap" *ngIf="consultation.consultation.birthDate">
-          <div class="c_info_row_title">
-            {{ 'chat.patientBirthday' | translate }}
-          </div>
-          <div class="c_info_row_content">
-            {{ consultation.consultation.birthDate | date: 'd MMM yyyy' }}
-          </div>
-        </div>
-        <div class="c_info_wrap">
-          <div class="c_info_row_title">{{ 'chat.sex' | translate }}</div>
-          <div class="c_info_row_content">
-            {{ consultation.consultation.gender | translatedGender }}
-          </div>
-        </div>
-        <div
-          class="c_info_wrap"
-          *ngIf="publicinvite && publicinvite.emailAddress">
-          <div class="c_info_row_title">{{ 'chat.email' | translate }}</div>
-          <div class="c_info_row_content">
-            {{ publicinvite.emailAddress }}
-          </div>
-        </div>
-        <div
-          class="c_info_wrap"
-          *ngIf="publicinvite && publicinvite.phoneNumber">
-          <div class="c_info_row_title">
-            {{ 'chat.phoneNumber' | translate }}
-          </div>
-          <div class="c_info_row_content">
-            {{ publicinvite.phoneNumber }}
-          </div>
-        </div>
-
-        <div
-          *ngIf="consultation.consultation.status === 'closed'"
-          class="c_info_wrap">
-          <div class="c_info_row_title">
-            {{ 'chat.doctor' | translate }}
-          </div>
-          <div class="c_info_row_content">
-            {{ currentUser.firstName }}
-            {{ currentUser.lastName | uppercase }}
-          </div>
-        </div>
-
-        <div class="c_info_wrap">
-          <div class="c_info_row_title">
-            {{ 'chat.patientInvitedAt' | translate }}
-          </div>
-          <div class="c_info_row_content">
-            {{
-              consultation.consultation.createdAt
-                | date: 'd MMM yyyy HH:mm' : 'fr'
-            }}
-          </div>
-        </div>
-
-        <div class="c_info_wrap" *ngIf="consultation && consultation.guest">
-          <div class="c_info_row_title">
-            {{ 'chat.guest' | translate }}
-          </div>
-          <div class="c_info_row_content">
-            {{ consultation.guest.email || consultation.guest.phoneNumber }}
-
-            <app-status
-              [type]="
-                consultation.consultation.flagGuestOnline ? 'online' : 'offline'
-              "></app-status>
-          </div>
-        </div>
-
-        <div
-          class="c_info_wrap"
-          *ngIf="consultation && consultation.translator">
-          <div class="c_info_row_title">
-            {{ 'chat.translator' | translate }}
-          </div>
-          <div class="c_info_row_content">
-            {{ consultation.translator.firstName }}
-
-            <app-status
-              [type]="
-                consultation.consultation.flagTranslatorOnline
-                  ? 'online'
-                  : 'offline'
-              "></app-status>
-          </div>
-        </div>
-        <div
-          *ngIf="consultation && consultation.translator"
-          class="c_info_wrap">
-          <div class="c_info_row_title">
-            {{ 'chat.translatorContactDetails' | translate }}
-          </div>
-          <div class="c_info_row_content">
-            {{ consultation.translator.email }} <br />
-            {{ consultation.translator.direct }}
-          </div>
-        </div>
-
-        <div
-          *ngIf="consultation.consultation.status === 'closed'"
-          class="c_info_wrap">
-          <div class="c_info_row_title">
-            {{ 'chat.startDateTime' | translate }}
-          </div>
-          <div class="c_info_row_content">
-            {{
-              consultation.consultation.acceptedAt
-                | date: 'd MMM yyyy HH:mm' : 'fr'
-            }}
-          </div>
-        </div>
-        <!-- Here i put the metadata informations  -->
-
-        <div *ngFor="let item of consultation.consultation.metadata | keyvalue">
-          <ng-container *ngIf="item.value">
-            <div class="c_info_wrap">
-              <div class="c_info_row_title">
-                {{ item.key }}
-              </div>
-              <div class="c_info_row_content">
-                {{ item.value }}
-              </div>
+            class="c_info_wrap"
+            *ngIf="publicinvite && publicinvite.emailAddress">
+            <div class="c_info_row_title">{{ 'chat.email' | translate }}</div>
+            <div class="c_info_row_content">
+              {{ publicinvite.emailAddress }}
             </div>
-          </ng-container>
-        </div>
-        <!--  -->
+          </div>
+          <div
+            class="c_info_wrap"
+            *ngIf="publicinvite && publicinvite.phoneNumber">
+            <div class="c_info_row_title">
+              {{ 'chat.phoneNumber' | translate }}
+            </div>
+            <div class="c_info_row_content">
+              {{ publicinvite.phoneNumber }}
+            </div>
+          </div>
 
-        <div
-          *ngIf="consultation.consultation.status === 'closed'"
-          class="c_info_wrap">
-          <div class="c_info_row_title">
-            {{ 'chat.endDateTime' | translate }}
+          <div
+            *ngIf="consultation.consultation.status === 'closed'"
+            class="c_info_wrap">
+            <div class="c_info_row_title">
+              {{ 'chat.doctor' | translate }}
+            </div>
+            <div class="c_info_row_content">
+              {{ currentUser.firstName }}
+              {{ currentUser.lastName | uppercase }}
+            </div>
           </div>
-          <div class="c_info_row_content">
-            {{
-              consultation.consultation.closedAt
-                | date: 'd MMM yyyy HH:mm' : 'fr'
-            }}
+
+          <div class="c_info_wrap">
+            <div class="c_info_row_title">
+              {{ 'chat.patientInvitedAt' | translate }}
+            </div>
+            <div class="c_info_row_content">
+              {{
+                consultation.consultation.createdAt
+                  | date: 'd MMM yyyy HH:mm' : 'fr'
+              }}
+            </div>
+          </div>
+
+          <div class="c_info_wrap" *ngIf="consultation && consultation.guest">
+            <div class="c_info_row_title">
+              {{ 'chat.guest' | translate }}
+            </div>
+            <div class="c_info_row_content">
+              {{ consultation.guest.email || consultation.guest.phoneNumber }}
+
+              <app-status
+                [type]="
+                  consultation.consultation.flagGuestOnline
+                    ? 'online'
+                    : 'offline'
+                "></app-status>
+            </div>
+          </div>
+
+          <div
+            class="c_info_wrap"
+            *ngIf="consultation && consultation.translator">
+            <div class="c_info_row_title">
+              {{ 'chat.translator' | translate }}
+            </div>
+            <div class="c_info_row_content">
+              {{ consultation.translator.firstName }}
+
+              <app-status
+                [type]="
+                  consultation.consultation.flagTranslatorOnline
+                    ? 'online'
+                    : 'offline'
+                "></app-status>
+            </div>
+          </div>
+          <div
+            *ngIf="consultation && consultation.translator"
+            class="c_info_wrap">
+            <div class="c_info_row_title">
+              {{ 'chat.translatorContactDetails' | translate }}
+            </div>
+            <div class="c_info_row_content">
+              {{ consultation.translator.email }} <br />
+              {{ consultation.translator.direct }}
+            </div>
+          </div>
+
+          <div
+            *ngIf="consultation.consultation.status === 'closed'"
+            class="c_info_wrap">
+            <div class="c_info_row_title">
+              {{ 'chat.startDateTime' | translate }}
+            </div>
+            <div class="c_info_row_content">
+              {{
+                consultation.consultation.acceptedAt
+                  | date: 'd MMM yyyy HH:mm' : 'fr'
+              }}
+            </div>
+          </div>
+          <!-- Here i put the metadata informations  -->
+
+          <div
+            *ngFor="let item of consultation.consultation.metadata | keyvalue">
+            <ng-container *ngIf="item.value">
+              <div class="c_info_wrap">
+                <div class="c_info_row_title">
+                  {{ item.key }}
+                </div>
+                <div class="c_info_row_content">
+                  {{ item.value }}
+                </div>
+              </div>
+            </ng-container>
+          </div>
+          <!--  -->
+
+          <div
+            *ngIf="consultation.consultation.status === 'closed'"
+            class="c_info_wrap">
+            <div class="c_info_row_title">
+              {{ 'chat.endDateTime' | translate }}
+            </div>
+            <div class="c_info_row_content">
+              {{
+                consultation.consultation.closedAt
+                  | date: 'd MMM yyyy HH:mm' : 'fr'
+              }}
+            </div>
+          </div>
+
+          <div
+            *ngIf="consultation.consultation.status === 'closed'"
+            class="c_info_wrap">
+            <div class="c_info_row_title">
+              {{ 'chat.duration' | translate }}
+            </div>
+            <div class="c_info_row_content">
+              {{
+                consultation.consultation.createdAt -
+                  consultation.consultation.closedAt | duration
+              }}
+            </div>
+          </div>
+        </ng-container>
+
+        <div *ngIf="isMobile && !viewMore">
+          <div class="c_info_wrap">
+            <div class="c_info_row_title">
+              {{ 'chat.patientFirstnameAndLastname' | translate }}
+            </div>
+            <div class="c_info_row_content">
+              {{ consultation.consultation.firstName + ' ' }}
+              {{ consultation.consultation.lastName | uppercase }}
+            </div>
           </div>
         </div>
 
-        <div
-          *ngIf="consultation.consultation.status === 'closed'"
-          class="c_info_wrap">
-          <div class="c_info_row_title">{{ 'chat.duration' | translate }}</div>
-          <div class="c_info_row_content">
-            {{
-              consultation.consultation.createdAt -
-                consultation.consultation.closedAt | duration
-            }}
-          </div>
-        </div>
+        <span class="view-more" *ngIf="isMobile" (click)="viewMore = !viewMore">
+          {{
+            viewMore
+              ? ('chat.viewLess' | translate)
+              : ('chat.viewMore' | translate)
+          }}
+        </span>
       </div>
     </div>
 
