--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -260,3 +260,9 @@ textarea:focus {
   border-left: 1px solid rgba(203, 203, 203, 0.93);
 
 }
+
+.view-more {
+  font-size: 12px;
+  text-decoration: underline;
+  color: var(--primary-color);
+}
