--- a/src/app/top-nav/top-nav.component.scss
+++ b/src/app/top-nav/top-nav.component.scss
@@ -54,13 +54,13 @@
     height: 28px;
     padding-bottom: 4px;
     width: 28px;
+    font-size: 28px;
   }
 
   .items {
-    left: 0;
-    width: 100%;
-    height: 140px;
-    bottom: -159px;
+    right: -5px;
+    top: 51px;
+    min-width: 220px;
     position: absolute;
 
     div {
